# lib43

./: .travis.yml  CMakeLists.txt  README.md
arch/arm/linux/: _start.s  syscall.c
arch/i386/: _start.s
arch/i386/linux/: _start.s  syscall.s
arch/i386/osx/: _start.s  start.s  syscall.s
arch/mips/linux/: start.s  syscall.c
arch/osx/x86_64/: _start.s
arch/x86_64/: _start.s  _syscall.s
arch/x86_64/linux/: syscall.s
arch/x86_64/netbsd/: note.s
arch/x86_64/osx/: syscall.s
example/: test.c
src/: _start.c  ctype.c  ctype.h  io.c  io.h  mem.c  mem.h  mman.c  mman.h  num.c  num.h  stdlib.h  string.c  string.h  syscall.c  syscall.h  syscall.list  syscalls.c  syscalls.h
src/math/: ceil.c  log.c
